# Language-Learning

./: .gitignore  README.md
DiMLSys/: .gitignore  CMakeLists.txt  build.sh
DiMLSys/doc/: ADMM_for_interview.html  ADMM调研-v0.1.md  DiMLSys.xmind  chapter5_DiMLSys_算法框架_ADMM_v0.1.md
DiMLSys/include/: base.h  hello.h  io.h
DiMLSys/lib/: libadmm.dylib
DiMLSys/src/: CMakeLists.txt  admm_learner.cpp
DiMLSys/src/common/: CMakeLists.txt
DiMLSys/src/io/: io.cc
DiMLSys/src/io/utils/: file.cc  file.h  string_utils.cc  test.cc
DiMLSys/src/updater/: hello.cc
DiMLSys/unittests/: CMakeLists.txt  functional_unittest.cc
admm_ml/: CMakeLists.txt  submit.sh
admm_ml/include/: hello.h
admm_ml/lib/: libhello.so.1.2
admm_ml/src/: CMakeLists.txt  admm_learner.cpp
ccpp-learning/docs/: CMake_Learning.md  cpp_learning_note_zy.md
ccpp-learning/docs_c_cpp_cmake/: CMake_Learning.md  OpenMIT代码规范文档.md  c_learning_note_zy.md  cmake_makefile_learning.md  cpp_learning_note_zy.md  linux_program_install_info.md  linux_system_and_software.md  software_and_tools.md
ccpp-learning/docs_dimlsys/: ADMM调研-v0.1.md  OpenMIT-Code.xmind  OpenMIT-Theory.xmind  OpenMIT.xmind  OpenMIT_PPT.key  chapter3_DiML_机器通信.md  chapter5_DiMLSys-算法框架-ADMM.md  chapter6_DiMLSys-算法模型-学习器.md  dmlc_core_代码结构.xmind
ccpp-learning/docs_hdml/: ml-chapter1-regression-family.md  ml-chapter10-clustering-family.md  ml-chapter2-entropy-based-family.md  ml-chapter3-tree-based-family.md  ml-chapter4-kernel-based-family.md  ml-chapter5-bayes-based-family.md  ml-chapter6-boosting-family.md  ml-chapter8-reinforcement-learning-family.md  ml-chapter9-factorization-family.md
ccpp-learning/docs_openmit/: ADMM_for_interview.md  ADMM分享_For_DMLC开发者.key  ADMM分享_For_算法组@周永.key  ADMM调研-v0.1.md  OpenMIT-Code.xmind  OpenMIT.xmind  OpenMIT相关架构图.graffle  OpenMIT进展.xmind  SpaceX_XGBoost线上预测.md  chapter5_DiML_算法框架_ADMM.md  openmit_summary.md  强化学习与智能决策.xmind
ccpp-learning/docs_openmit/OpenMIT相关架构图.graffle/: data.plist  image1.tiff  image2.tiff  image3.tiff  image4.tiff  image6.tiff  image7.tiff
ccpp-learning/docs_openmit/UML类图-dmlc_core.graffle/: data.plist
ccpp-learning/docs_openmit/shell_learning/: conf.sh  shell_map.sh
ccpp-learning/docs_openmit/分布式机器学习系列/: chapter01_OpenMIT_先睹为快.md  chapter03_OpenMIT_机器通信.md  chapter04_OpenMIT_算法框架.md  chapter1_DiML_综述.md  chapter3_DiML_机器通信.md  chapter3_DiML_系统架构.md  chapter5_DiML_算法框架_ADMM.md  chapter6_DiML_优化算法.md
ccpp-learning/docs_openmit/开源技术总结/: TensorFlow_Tensor.md  dmlc_summary_ps-lite.md  summary_deepforce_tensorflow_mxnet.md  summary_reinforcement_learning.md  summary_tensorflow.md
ccpp-learning/docs_openmit/机器智能工具组件系列/: chapter01_OpenMIT_先睹为快.md  chapter02_OpenMIT_计算框架.md
ccpp-learning/docs_openmit/系列总结/: TechsSummary.xmind
ccpp-learning/docs_openmit/系列总结/强化学习与智能决策/: chapter1-reinforcement-learning-introduction.md  chapter3-markov-decision-process.md  chapter4-dynamic-programming.md  chapter5_monte_carlo_methods.md
ccpp-learning/docs_openmit/系列总结/技术与工具应用总结/人工智能技术/: summary_deepforce_tensorflow_mxnet.md  techs_summary_tensorflow.md
ccpp-learning/docs_openmit/系列总结/技术与工具应用总结/机器通信与RPC/: rdma_verbs.md
ccpp-learning/docs_openmit/系列总结/技术与工具应用总结/编程语言/: c_learning_note_zy.md  cpp_learning_note_zy.md
ccpp-learning/docs_openmit/系列总结/机器智能与OpenMIT/OpenMIT_大规模机器学习系列/: 参数服务器详解.md
ccpp-learning/docs_openmit/系列总结/机器智能与OpenMIT/OpenMIT_机器智能系列/: chapter02_OpenMIT_系统架构.md  chapter03_OpenMIT_算法框架.md  chapter04_OpenMIT_机器学习模型.md  chapter05_OpenMIT_参数学习算法.md  chapter07_OpenMIT_智能决策算法.md
ccpp-learning/docs_openmit/系列总结/机器智能与OpenMIT/openmit技术规范/: openmit代码规范文档.md
ccpp-learning/docs_openmit/系列总结/机器智能与工具组件/: no_chapter10_OpenMIT_机器智能.md  大规模机器学习技术与OpenMIT系列－参数服务器详解.md
ccpp-learning/docs_openmit/系列总结/深入浅出机器学习/: ml-chapter9-factorization-family.md
ccpp-learning/docs_openmit/面试资料总结/: data_structure_algo.md
ccpp-learning/src/ftrl/: FTRL总结笔记_ZY.md  ftrl_initial.py  ftrl_modify_new.py  ftrl_proximal_solver.py  log  testing.txt  training.txt
ccpp-learning/zy_cpp/data/: example.txt
ccpp-learning/zy_cpp/include/dmlc/: common.h  io.h  serializer.h
ccpp-learning/zy_cpp/src/: common.h  exec.sh  io.cc  io.h  makefile  optimizer.h  string_utils.cc  test.cc  xx
ccpp-learning/zy_cpp/src/io/: io.cc  io.h
ccpp-learning/zy_cpp/src/utils/: file.cc
cross-lang/: pom.xml
cross-lang/src/main/java/org/caml/cross_lang/: VisitCpp.java
cross-lang/src/main/resources/test/: test.txt
java-learning/: pom.xml
java-learning/data/: binary.model
java-learning/design-pattern/: pom.xml
java-learning/io/: pom.xml
java-learning/junit/: README.md  pom.xml
java-learning/junit/src/main/java/: C1.java  Test.java
java-learning/junit/src/main/java/org/caml/java/junit/samples/: Calculator.java  CalculatorTest.java  CalculatorTest2.java  CalculatorTestSuite.java
java-learning/logger/: pom.xml
java-learning/ml-online/: pom.xml
java-learning/ml-online/src/main/java/org/caml/java/ml/: IO.java  Predictor.java
java-learning/ml-online/src/main/java/org/caml/java/ml/demo/: Example.java
java-learning/ml-online/src/main/java/org/caml/java/ml/io/: FileUtils.java  TextFileIO.java
java-learning/ml-online/src/main/java/org/caml/java/ml/util/: ModelReader.java  ResourceUtil.java
java-learning/ml-online/src/main/java/org/caml/java/ml/xgb/: ModelParam.java
java-learning/ml-online/src/main/resources/: 0002.model  dump.nice.txt  dump.raw.txt  xx.txt
java-learning/multi-thread/: pom.xml
java-learning/spring/: pom.xml
java-learning/spring/src/main/java/org/caml/java/spring/bean/demo/: RoleDao.java  Student.java  TestBeanDemo.java  User.java  UserDao.java
java-learning/spring/src/main/java/org/caml/java/spring/junit4/: CalculatorTest.java
java-learning/spring/src/main/resources/config/spring/: appcontext-demo.xml
java-learning/spring/src/main/webapp/WEB-INF/: web.xml
java-learning/src/main/java/container/: ListLearning.java
java-learning/src/main/java/utils/: ContainerUtils.java
